codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1262
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ ✨ Update available! 0.154.0-alpha.4 -> 9.9.9   │
│ Run vp install -g @openai/codex to update.      │
│                                                 │
│ See full release notes:                         │
│ https://github.com/openai/codex/releases/latest │
╰─────────────────────────────────────────────────╯
